fixtures/frontend/milestone-2/valid/pipe-branch-and-join/main.aivi
type User = { email: Text }

fun collect items =>
    items

val ready = True
val start = "start"
val wait = "wait"
val branch =
    ready
     T|> start
     F|> wait

val users = []
val emails =
    users
     *|> .email
     <|* collect
