fixtures/frontend/milestone-2/invalid/fanin-without-map/main.aivi
value collect items =>
    items

value users = []
value emails =
    users
     <|* collect
